--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "A small quote-serving JSON API.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
